fix alignment issue on map article category

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -329,6 +329,11 @@ html, body {
 .article-header {
   display: flex;
   justify-content: space-between;
+  .article-category {
+    overflow-wrap: break-word;
+    text-align: right;
+
+  }
 }
 
 .container-title {
